syntax = "proto3";

package grade;

service GradeService {
  rpc ListGrades (ListGradesRequest) returns (ListGradesResponse);
  rpc UploadGrade (UploadGradeRequest) returns (UploadGradeResponse);
}

message GradeRecord {
  string id = 1;
  string courseId = 2;
  string courseName = 3;
  string studentId = 4;
  string facultyId = 5;
  string grade = 6;
}

message ListGradesRequest {
  string userId = 1;
}

message ListGradesResponse {
  repeated GradeRecord grades = 1;
}

message UploadGradeRequest {
  string studentId = 1;
  string courseId = 2;
  string facultyId = 3;
  string grade = 4;
}

message UploadGradeResponse {
  GradeRecord record = 1;
}