syntax = "proto3";

package auth;

message User {
  string id = 1;
  string email = 2;
  string role = 3;
  string firstName = 4;
  string lastName = 5;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string error = 2;
  string token = 3;
  User user = 4;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string userId = 2;
}

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}
